# nanochat-mlx

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  TESTING.md  docker-compose.yml  pyproject.toml
runs/: quickstart.sh
scripts/: chat.py  chat_eval.py  convert_from_hf.py  quickstart.py  serve.py  sft.py  tok_train.py  train.py
tasks/: customjson.py  humaneval.py  spellingbee.py  tool_calling.py
tests/: test_gpt.py  test_tools.py
tinychat_mlx/: common.py  dataloader.py  dataset.py  engine.py  eval.py  gpt.py  optim.py  quickstart_ui.html  sft.py  sft_dataloader.py  tokenizer.py  tools.py  train.py  ui.html
